Added & tested JWT auth